# MusizAstralExpress

./: .codex_sdk_list.txt  .eslintrc.json  .gitignore  PROJECT_TODO.md  README.md  TODO_SORT_BY_ADDED_AT.md  UI_update.md  gemini_plan.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.tmp/: auth_store_for_ui.json  auth_store_probe.json  cdp-eval.ps1  cleanup-and-build.ps1  window_dump.xml
.tmp/qqweb/: chunk2.js  common.chunk.js
design/: allmusic-ui-concept.html  bygemini.html  cssbygemini.html  indexbygemini.html  player.html  player_2.html  player_4.html  playlist_design.html  v4-gemini-fusion-ux-glam.html  v4-gemini-fusion-ux.html  v4-gemini-fusion.html  v5-fusion-evolution.html  v6-spectral-interface.html
design/stitch/: DESIGN.md  code.html
design/v4.2-glam/: index.html  script.js  style.css
design/v7-explorations/: claymorphism.html  material.html  neo-brutalism.html  skeuomorphism.html  (+1 more)
docs/: UI_RECONSTRUCTION_HANDOVER.md  UI_VERSION_MIGRATION_CHECKLIST.md  daily-recommend-cache-architecture.md
project_memory/: code-graph.md  context.md  decisions.md  findings.md
research_add_time/: netease_test.js  netease_test_cjs.cjs  qq_order_probe.py  qq_test.py
scripts/: build-portable.ps1  build-vendor.cjs  check-android-env.cjs  clean-tauri-dev-cache.cjs  ios-plan.cjs  kill-dev-ports.cjs  qmusic_adapter_server.py  run-android-tauri.cjs  smoke-services.cjs  start-netease-api.cjs  start-netease-api.js  start-qmusic-adapter.cjs  start-qq-api.cjs  test-netease-cookie.mjs
src/: App.tsx  index.css  main.tsx  neon-theme.css  styles.css
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  desktop.rs  lib.rs  main.rs  services.rs  types.rs  utils.rs
src-tauri/src/commands/: auth.rs  cover.rs  local_api.rs  mod.rs  netease.rs  thumbnail.rs  window.rs
(+702 files in other folders)
