[package]
name = "allmusic"
version = "0.1.0"
description = "A unified music player for QQ Music and NetEase Cloud Music"
authors = ["you"]
edition = "2021"

[lib]
name = "allmusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "charset"] }
regex = "1"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
