[package]
name = "allmusic"
version = "0.1.0"
description = "A unified music player for QQ Music and NetEase Cloud Music"
authors = ["you"]
edition = "2021"

[lib]
name = "allmusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate", "charset"] }
regex = "1"
tauri-plugin-global-shortcut = "2"
once_cell = "1.20"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
